--- a/magic.css
+++ b/magic.css
@@ -1,4 +1,3 @@
-html { height: 100%; }
 
 div {
     white-space: pre-wrap;
@@ -9,12 +8,11 @@ div {
 /* JetBrains Mono as font */
 
 @font-face {
-    font-family: 'JetBrainsMono';
-    src: url('https://cdn.jsdelivr.net/gh/JetBrains/JetBrainsMono/web/woff2/JetBrainsMono-Regular.woff2') format('woff2'),
-      url('https://cdn.jsdelivr.net/gh/JetBrains/JetBrainsMono/web/woff/JetBrainsMono-Regular.woff') format('woff'),
-      url('https://cdn.jsdelivr.net/gh/JetBrains/JetBrainsMono/ttf/JetBrainsMono-Regular.ttf') format('truetype');
-    font-weight: 400;
+    font-family: 'Space Mono';
     font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/spacemono/v13/i7dPIFZifjKcF5UAWdDRYEF8RQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* GLOBAL STYLES */
@@ -31,12 +29,12 @@ body {
     color: #fff;
     display: flex;
     
-    font-family: 'JetBrainsMono';
+    font-family: 'Space mono';
     overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid white; /* The typwriter cursor */
+    border-right: .10em solid white; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    letter-spacing: .09em; /* Adjust as needed */
     position: relative;
 
     animation: 
@@ -78,7 +76,7 @@ body {
 
 
 .bg-grad {
-    background-image: linear-gradient(45deg, black, #0f0f0f);
+    background-image: linear-gradient(45deg, black, #0f0f0f) ;
     background-attachment: fixed;
     width: auto;
     height: 100%;
